--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #0A014F;
+  background-color: rgb(55, 55, 55);
   color: white;
   padding: 20px 0;
   position: relative;
@@ -26,7 +26,7 @@
 .footer-section h3 {
   padding-bottom: 10px;
   margin-bottom: 10px;
-  color: #ef730d;
+  color: #ffffff;
 }
 
 .footer-section p, .footer-section ul, .footer-section a {
@@ -51,7 +51,7 @@
 }
 
 .footer-logo span {
-  color: #ef730d;
+  color: #ffffff;
 }
 
 /* Social Media */
@@ -62,7 +62,7 @@
 }
 
 .social-media a{
-  color: #ef730db4;
+  color: #ffffff;
   text-align: center;
   display: inline-block;
   border: 2px solid #ccc;
@@ -79,7 +79,7 @@
 }
 
 .social-media a:hover {
-  color: #ef730d;
+  color: #ffffff;
   border: 2px solid white;
 }
 
@@ -112,7 +112,7 @@
 }
 
 .footer-bottom ul li:hover span {
-  color: #ef730d;
+  color: #ffffff;
 }
 
 .footer-bottom ul li:hover {
