--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,7 +24,7 @@ body.no-scroll {
 }
 
 #root {
-  background-color: #242424;
+  background-color: whitesmoke;
 }
 
 .fade-enter {
