--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body.no-scroll {
 }
 
 #root {
-  background-color: whitesmoke;
+  background-color: white;
 }
 
 .fade-enter {
@@ -46,17 +46,6 @@ body.no-scroll {
   background-color: black;
 }
 
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-h2 {
-  font-size: 2.7em;
-  line-height: 1.1;
-}
-
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -68,9 +57,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #ef730d;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
