quiz fully working

--- a/src/css/Quiz2.css
+++ b/src/css/Quiz2.css
@@ -84,62 +84,62 @@ img {
 
 #card-1-f,
 #card-1-b  {
-  background: #f1c40f;
+  background: #38f10f;
 }
 
 #card-2-f,
 #card-2-b {
-  background: #cfa80c;
+  background: #16cf0c;
 }
 
 #card-3-f,
 #card-3-b  {
-  background: #ffd633;
+  background: #33982b;
 }
 
 #card-4-f,
 #card-4-b  {
-  background: #ffee53;
+  background: #86ff92;
 }
 
 #card-5-f,
 #card-5-b  {
-  background: #003cff;
+  background: #ff0000;
 }
 
 #card-6-f,
 #card-6-b  {
-  background: #5261ff;
+  background: #8e1e2f;
 }
 
 #card-7-f,
 #card-7-b  {
-  background: #0600be;
+  background: #be0000;
 }
 
 #card-8-f,
 #card-8-b  {
-  background: #3235ce;
+  background: #ff4f4f;
 }
 
 #card-9-f,
 #card-9-b  {
-  background: #7fff92;
+  background: #fff27f;
 }
 
 #card-10-f,
 #card-10-b  {
-  background: #ff5252;
+  background: #5263ff;
 }
 
 #card-11-f,
 #card-11-b  {
-  background: #00ff08;
+  background: #ffff00;
 }
 
 #card-12-f,
 #card-12-b  {
-  background: #be0000;
+  background: #0900be;
 }
 
 .timer {
