--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,6 +1,13 @@
 /* Main */
 
-.main-container {
+.home-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.home-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -47,4 +54,22 @@
   background: #333;
   color: #ffffff;
   transform: rotateY(180deg);
+}
+
+.link-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.link-container a {
+  text-decoration: none;
+  color: white;
+  padding: 10px 20px;
+  margin-left: 20px;
+  justify-content: center;
+  border: 2px solid #333;
+  background-color: #333;
+  margin-bottom: 20px;
+  border-radius: 5px;
 }
