--- a/src/css/Quiz2.css
+++ b/src/css/Quiz2.css
@@ -84,12 +84,12 @@ img {
 
 #card-1-f,
 #card-1-b  {
-  background: #38f10f;
+  background: #56C02B;
 }
 
 #card-2-f,
 #card-2-b {
-  background: #16cf0c;
+  background: #3F7E44;
 }
 
 #card-3-f,
@@ -99,47 +99,47 @@ img {
 
 #card-4-f,
 #card-4-b  {
-  background: #86ff92;
+  background: #6af979;
 }
 
 #card-5-f,
 #card-5-b  {
-  background: #ff0000;
+  background: #C5192D;
 }
 
 #card-6-f,
 #card-6-b  {
-  background: #8e1e2f;
+  background: #f33147;
 }
 
 #card-7-f,
 #card-7-b  {
-  background: #be0000;
+  background: #f33147;
 }
 
 #card-8-f,
 #card-8-b  {
-  background: #ff4f4f;
+  background: #C5192D;
 }
 
 #card-9-f,
 #card-9-b  {
-  background: #fff27f;
+  background: #DDA63A;
 }
 
 #card-10-f,
 #card-10-b  {
-  background: #5263ff;
+  background: #26BDE2;
 }
 
 #card-11-f,
 #card-11-b  {
-  background: #ffff00;
+  background: #FCC30B;
 }
 
 #card-12-f,
 #card-12-b  {
-  background: #0900be;
+  background: #19486A;
 }
 
 .timer {
