--- a/src/css/Quiz1.css
+++ b/src/css/Quiz1.css
@@ -84,7 +84,7 @@ img {
 
 #card-1-f1,
 #card-1-b1  {
-  background: #FD9D24;
+  background: #FCC30B;
 }
 
 #card-2-f1,
@@ -94,12 +94,12 @@ img {
 
 #card-3-f1,
 #card-3-b1  {
-  background: #FCC30B;
+  background: #BF8B2E;
 }
 
 #card-4-f1,
 #card-4-b1 {
-  background: #BF8B2E;
+  background: #FCC30B;
 }
 
 #card-5-f1,
@@ -109,12 +109,12 @@ img {
 
 #card-6-f1,
 #card-6-b1  {
-  background: #00689D;
+  background: #0A97D9;
 }
 
 #card-7-f1,
 #card-7-b1  {
-  background: #0A97D9;
+  background: #00689D;
 }
 
 #card-8-f1,
@@ -124,7 +124,7 @@ img {
 
 #card-9-f1,
 #card-9-b1  {
-  background: #56C02B;
+  background: #4C9F38;
 }
 
 #card-10-f1,
@@ -134,12 +134,12 @@ img {
 
 #card-11-f1,
 #card-11-b1  {
-  background: #3F7E44;
+  background: #56C02B;
 }
 
 #card-12-f1,
 #card-12-b1  {
-  background: #C5192D;
+  background: #A21942;
 }
 
 .timer {
