--- a/src/css/Quiz2.css
+++ b/src/css/Quiz2.css
@@ -84,7 +84,7 @@ img {
 
 #card-1-f,
 #card-1-b  {
-  background: #56C02B;
+  background: #4C9F38;
 }
 
 #card-2-f,
@@ -94,47 +94,47 @@ img {
 
 #card-3-f,
 #card-3-b  {
-  background: #33982b;
+  background: #3F7E44;
 }
 
 #card-4-f,
 #card-4-b  {
-  background: #6af979;
+  background: #56C02B;
 }
 
 #card-5-f,
 #card-5-b  {
-  background: #C5192D;
+  background: #E5243B;
 }
 
 #card-6-f,
 #card-6-b  {
-  background: #f33147;
+  background: #DD1367;
 }
 
 #card-7-f,
 #card-7-b  {
-  background: #f33147;
+  background: #C5192D;
 }
 
 #card-8-f,
 #card-8-b  {
-  background: #C5192D;
+  background: #A21942;
 }
 
 #card-9-f,
 #card-9-b  {
-  background: #DDA63A;
+  background: #FCC30B;
 }
 
 #card-10-f,
 #card-10-b  {
-  background: #26BDE2;
+  background: #0A97D9;
 }
 
 #card-11-f,
 #card-11-b  {
-  background: #FCC30B;
+  background: #DDA63A;
 }
 
 #card-12-f,
