--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -29,6 +29,8 @@
   position: relative;
   transform-style: preserve-3d; 
   transition: transform 0s;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
 }
 
 .card:hover {
@@ -48,6 +50,7 @@
 .card-front {
   background: #ffffff;
   color: #333;
+  grid-template-rows: auto 1fr;
 }
 
 .card-back {
@@ -72,4 +75,10 @@
   background-color: #333;
   margin-bottom: 20px;
   border-radius: 5px;
+}
+
+.card img {
+  width: 70%;
+  height: 38%;
+  margin-top: 10%;
 }
